--- a/index.html
+++ b/index.html
@@ -68,25 +68,8 @@
 
     <!-- Carousel -->
     <div id="carouselExampleControls" class="carousel" data-bs-ride="carousel">
-      <div style="border:blue solid 5px;font-size:46px;" id="carouselInner" class="carousel-inner"></div>
-        <button
-          class="carousel-control-prev"
-          type="button"
-          data-bs-target="#carouselExampleControls"
-          data-bs-slide="prev"
-        >
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button
-          class="carousel-control-next"
-          type="button"
-          data-bs-target="#carouselExampleControls"
-          data-bs-slide="next"
-        >
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
+      <div  id="carouselInner" class="carousel-inner"></div>
+       
     </div>
 
     <!-- Information Section -->
